# django-nextjs-todo-app

./: package-lock.json  package.json
backend/: pyproject.toml
backend/apps/todo/: models.py  serializers.py  urls.py  views.py
backend/apps/todo/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: TodoForm.tsx  TodoList.tsx
frontend/src/pages/: TodoForm.tsx  index.tsx
