[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tohara220 <tohara.220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
